# Parsr

./: .drone.yml  .eslintrc.json  .gitignore  .prettierrc.js  .remark-ignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  README_fr.md  README_pt.md  README_sp.md  README_zh-cn.md  Readme中文.md  _coverpage.md  _navbar.md  docker-compose-build.yml  docker-compose.yml  index.html  package-lock.json  package.json  preinstall.js  sonar-project.properties  tsconfig.json  tslint.json
clients/python-client/: README.md  README.rst  pyproject.toml
clients/python-client/parsr_client/: __init__.py  parsr_client.py  parsr_output_interpreter.py
clients/python-client/tests/: test_parsr_client.py
demo/doc-versioning/: README.md  pyproject.toml  run.py
demo/doc-versioning/doc_versioning/: __init__.py
demo/doc-versioning/doc_versioning/gui/: document.html  index.html  view.html
demo/doc-versioning/doc_versioning/gui/css/: normalize.css  skeleton.css
demo/doc-versioning/doc_versioning/src/backend/: app.py  defaultConfig.json  main.py  server.py
demo/doc-versioning/doc_versioning/src/frontend/: README
demo/doc-versioning/tests/: test_doc_versioning.py
demo/parsr-python-client/: pyproject.toml
demo/parsr-python-client/parsr_client/: Pipfile
docker/: tags.sh
docs/: API-deprecated.md  README.md  abbyy-finereader.md  api-guide.md  api.html  configuration-file.md  configuration.md  create-your-module.md  dependencies.md  docker.md  google-vision.md  gui-guide.md  installation.md  json-output.md  modules.md  simple-json-output.md  usage.md
docsify/: index.html
parsr-fix-pdf-font/: README.md  package-lock.json  package.json  parsr-fix-pdf-font.js
preinstall-scripts/: darwin.bash.sh  darwin.commands.js  index.js  windows.commands.js
samples/: hola.content.txt  hola.json  hola.merged.json  line-merge.content.txt  line-merge.json  line-merge.merged.json  line-merge.pdf.tiff
server/: configKeyValueSearch.json  defaultConfig.json  remoteModuleConfig.json
test/: config-merge.spec.ts  drawing-reconstruction.spec.ts  header-footer.spec.ts  helpers.ts  input-extractors.spec.ts  json-export-import.spec.ts  line-merge.spec.ts  lines-to-paragraph.spec.ts  link-detection.spec.ts  markdown-exporter.spec.ts  number-correction.spec.ts  number-digits-preservation.spec.ts  page-orientation.spec.ts  paragraph-merge.spec.ts  pdfminer-extractor.spec.ts  (+7 more)
(+1078 files in other folders)
